[package]
name = "lowland"
version = "0.1.0"
edition = "2021"
description = "Lowland programming language interpreter"
authors = ["Lowland Team"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
rustyline = "12.0"
uuid = { version = "1.4", features = ["v4"] }
regex = "1.9"
thiserror = "1.0"

[lib]
name = "lowland"
path = "src/lib.rs"

[[bin]]
name = "low"
path = "src/main.rs"
